plugins/traffic-control/request-validator/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-validator-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: request-validator-plugin
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /requestValidator
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo
                port:
                  number: 80
